--- a/MerlionPortal/MerlionPortal-war/web/tms/addnewtasset.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/addnewtasset.xhtml
@@ -119,7 +119,7 @@
 
                     <p:row>
                         <p:column>
-                            <h:outputLabel for="capacity" style="font-weight: bold" value="Capacity(t) : *" />
+                            <h:outputLabel for="capacity" style="font-weight: bold" value="Capacity(TEU) : *" />
                         </p:column>
                         <p:column>
                             <p:inputText required="true" label="capacity" requiredMessage="capacity is required." id="capacity" value="#{tAssetManagedBean.capacity}">
