--- a/MerlionPortal/MerlionPortal-war/web/tms/viewalllog.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewalllog.xhtml
@@ -150,7 +150,7 @@
                         </p:column>
 
                         <p:column headerText = "Delete Transportation Asset">
-                            <p:commandButton action="#{tOLogViewEditManagedBean.deleteLog(log)}" update="tAssetData" value="Delete">
+                            <p:commandButton action="#{tOLogViewEditManagedBean.deleteLog(log)}" update="logData" value="Delete">
                                 <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this Log?" icon="ui-icon-alert" />
                             </p:commandButton> 
                             <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
