--- a/MerlionPortal/MerlionPortal-war/web/tms/viewalltasset.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/tms/viewalltasset.xhtml
@@ -179,6 +179,9 @@
                     </p:column>
 
                 </p:dataTable>
+                
+                <!--<p:chart type="pie" model="#{TTassetViewEditManagedBean.pieModel1}" style="width:400px;height:300px" />-->
+                
                 <p:messages id="messages" showDetail="true" autoUpdate="true" closable="true" />
             </p:panel>
             </h:form>
