--- a/MerlionPortal/MerlionPortal-war/web/oes/reportdashboard.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/oes/reportdashboard.xhtml
@@ -76,7 +76,7 @@
                         <c:set var="disableoes" value="true" />                      
                         <c:set var="disableoes" value="false" />
                         <p:commandLink action="reportsalestrend.xhtml?faces-redirect=true" disabled="${disableoes}" >
-                            <p:graphicImage value="../img/oestile.jpg"/>
+                            <p:graphicImage value="../img/salestrend.png"/>
                         </p:commandLink>
                     </div>
                     <div class="dashboard-box">
@@ -84,7 +84,7 @@
                         <c:set var="disablemrp" value="true" />                    
                         <c:set var="disablemrp" value="false" />
                         <p:commandLink action="reportsalessum.xhtml?faces-redirect=true" disabled="${disablemrp}" >
-                            <p:graphicImage value="../img/mrptile.jpg"/>
+                            <p:graphicImage value="../img/monthlyreport.png"/>
                         </p:commandLink>  
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                         <c:set var="disablecrms" value="true" />
                         <c:set var="disablecrms" value="false" />
                         <p:commandLink action="customeranalysis?faces-redirect=true" disabled="${disablecrms}" >
-                            <p:graphicImage value="../img/crmstile.jpg"/>
+                            <p:graphicImage value="../img/customeranalysis.png"/>
                         </p:commandLink> 
                     </div>                   
                 </div>
