--- a/MerlionPortal/MerlionPortal-war/web/wms/viewallnotification.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewallnotification.xhtml
@@ -65,7 +65,7 @@
 
         <ui:define name="right">
             <h:form id="formMain">
-                <p:dataTable id="productOrder" var="productOrder" value="#{retrieveSavedOrder.productOrderList}"  resizableColumns="true" selectionMode="single" selection="#{retrieveSavedOrder.selectedOrder}" rowKey="#{productOrder.productPOId}">
+                <p:dataTable id="productOrder" var="productOrder" value="#{viewNotificationManagedBean.productOrders}"  resizableColumns="true" selectionMode="single" selection="#{retrieveSavedOrder.selectedOrder}" rowKey="#{productOrder.productPOId}">
                     <p:column  
                         filterBy="#{productOrder.productPOId}" 
                         filterMatchMode="exact" headerText="Saved Id" >
